--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "puppeteer": "^16.2.0"
+    "puppeteer": "^16.2.0",
+    "xlsx": "^0.18.5"
   }
 }
